--- a/Front-TaskLevel/css/home.css
+++ b/Front-TaskLevel/css/home.css
@@ -128,10 +128,11 @@ main {
     height: 658px;
     display: flex;
     flex-direction: column;
-    padding: 32px;
+    padding: 32px;   
     overflow: hidden;
-
+ 
 }
+
 .atividade_focus {
     background-color: rgba(12, 45, 50, 0.3);
     position: absolute;
@@ -215,14 +216,15 @@ main {
     gap: 6px;
 }
 
-.atividades{
+.atividades {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
 }
-.botaoConfirmarECriar{
+
+.botaoConfirmarECriar {
     background-color: #92C7CF;
     width: 120px;
     font-size: 20px;
@@ -235,9 +237,20 @@ main {
     justify-content: center;
 }
 
-.filtro{
+.filtro {
     cursor: pointer;
     background-color: transparent;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+}
+
+.comentarios {
+    background-color: #AAD7D9;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 12px 12px 0px;
+    border-radius: 12px;
+    width: 30%;
 }
